Update with 2017 locations

--- a/_includes/nodebots-day.html
+++ b/_includes/nodebots-day.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>International NodeBots Day</h2>
     <div class="content-wrapper">
-      <p>This year's event was on <strong>July 30th 2016</strong> <a href="https://github.com/nodebots/nodebotsday">Join us at an event near you!</a></p>
+      <p>This year's event is on <strong>July 29th 2017</strong> <a href="https://github.com/nodebots/nodebotsday">Join us at an event near you!</a></p>
       <p>Each year our community around the world gather on a single day to learn and make together. We call this NodeBots Day!</p>
 
       <p>NodeBots Day is world wide event where people learn how to control the physical world with JavaScript. We want you to leave with the satisfaction of making something awesome! Each event has experts on hand to help you build your project and start you on the path to building awesome devices. Overall we're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company and JavaScript. Lots of JavaScript.</p>
@@ -17,68 +17,43 @@
         Staying in this year? Follow along from home! Get a <a href="#getting-started">kit</a>, find a project and join us in the <a href="https://gitter.im/nodebots/nodebots.io">chat</a>.
       </p>
 
-      <h3>2016 Locations!</h3>
+      <h3>2017 Locations!</h3>
 
       <div class="col-50">
         <h4>North America</h4>
         <ul>
-          <li><a href="http://www.meetup.com/Anchorage-Makers/events/232963512/">Anchorage, Alaska, USA</a></li>
-          <li><a href="http://nodebotschs.github.io/">Charleston, South Carolina, USA</a></li>
-          <li><a href="https://www.eventbrite.com/e/international-nodebots-day-chicago-tickets-25845975007?aff=es2
-">Chicago, IL, USA</a></li>
-          <li><a href="http://gemcityjs.com/nodebots/">Dayton, OH, USA</a></li>
-          <li><a href="http://www.meetup.com/Hackster-DFW/events/232082488/">Dallas, Texas, USA</a></li>
-          <li><a href="https://nodejshouston.github.io/bots/">Houston, Texas, USA</a></li>
-          <li><a href="http://nodebotsday.caa.com/">Los Angeles, California, USA</a></li>
-          <li><a href="http://www.meetup.com/MiamiJS/events/232549993/">Miami, FL, USA</a></li>
-          <li><a href="https://ti.to/bocoup/nodebots-day-nyc-2016">New York City, USA</a></li>
-          <li><a href="http://www.meetup.com/NorfolkJS/events/228925845/">Norfolk, Virginia, USA</a></li>
-          <li><a href="https://ti.to/monteslu/nodebots-day-phx-2016">Phoenix/Mesa, Arizona, USA</a></li>
-          <li><a href="https://ti.to/techramento/nodebots-day-by-sacjs">Sacramento, California, USA</a></li>
-          <li><a href="http://www.seattlecoderdojo.com/">Seattle, Washington, USA</a></li>
-          <li><a href="http://www.meetup.com/es-ES/NodeBotsMX/events/232572631/">Mexico City, Mexico</a></li>
-          <li><a href="https://nodedc.github.io/bots/">Washington DC, USA</a></li>
-        </ul>
-
-        <h4>Central America</h4>
-        <ul>
-          <li><a href="http://www.meetup.com/Innovation-Guatemala/events/230541501/">Guatemala City, Guatemala</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Auburn/">Auburn, California, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Dallas/">Dallas, Texas, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Houston/">Houston, Texas, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Memphis/">Memphis, Tennessee, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Norfolk/">Norfolk, Virginia, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Phoenix/">Phoenix/Mesa, Arizona, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Mexico/">Mexico City/, Mexico</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Miami/">Miami, Florida, USA</a></li>
         </ul>
 
         <h4>South America</h4>
         <ul>
-          <li><a href="https://www.meetup.com/MedellinJS/events/232970122/">Medellín, Colombia</a></li>
-          <li><a href="https://encontros.matehackers.org/pt/projects/41-nodebotsday-porto-alegre">Porto Alegre, Brasil</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Bogota/">Bogotá DC, Bogotá DC, Colombia</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Salvador/">Salvador, Bahia, BRA</a></li>
         </ul>
       </div>
 
       <div class="col-50">
-        <h4>Africa</h4>
-        <ul>
-          <li><a href="http://www.meetup.com/Hackster-Abuja/">Abuja, Nigeria</a></li>
-          <li><a href="https://www.facebook.com/nextronic.ma/">Casablanca, Morocco</a></li>
-        </ul>
-
-        <h4>Antarctica</h4>
-        <ul>
-          <li>We can help make this happen! <a href="https://github.com/nodebots/nodebotsday/tree/master/2016/_template">Be the first ever!</a></li>
-        </ul>
-
+        
         <h4>Asia</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2016/tokyo">Tokyo, Japan</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Kerala/">Kerala, India</a></li>
         </ul>
 
         <h4>Australia</h4>
         <ul>
-          <li><a href="http://nodebotsau.io/">Melbourne, Australia</a></li>
-          <li><a href="http://nodebotsau.io/">Brisbane, Australia</a></li>
-          <li><a href="https://ti.to/nbdau/nodebots-syd-2016">Sydney, Australia</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Melbourne/">Melbourne, Victoria (22 July, 2017)</a></li>
         </ul>
 
         <h4>Europe</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2016/barcelona">Barcelona, Catalunya, Spain</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/NoviSad">Novi Sad, Serbia</a></li>
         </ul>
       </div>
     </div>
