Get teh spinning star

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <a href="/">{% include nodebot-logo.html %}</a>
     <h1>NodeBots</h1>
     <h2>{{ page.introTitle }}</h2>
-    {{!% include nodebots-day-star.html %}}
+    {{% include nodebots-day-star.html %}}
   </header>
 
   {{ content }}
