--- a/_includes/nodebots-day.html
+++ b/_includes/nodebots-day.html
@@ -35,6 +35,7 @@
         <h4>South America</h4>
         <ul>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Bogota/">Bogotá DC, Bogotá DC, Colombia</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Medellin/">Medellín, Antioquia, Colombia</a></li>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Salvador/">Salvador, Bahia, BRA</a></li>
         </ul>
       </div>
