Added Chicago for International Nodebots Day

--- a/_includes/nodebots-day.html
+++ b/_includes/nodebots-day.html
@@ -23,6 +23,7 @@
         <h4>North America</h4>
         <ul>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Auburn/">Auburn, California, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Chicago/">Chicago, Illinois, USA</a></li>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Dallas/">Dallas, Texas, USA</a></li>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Houston/">Houston, Texas, USA</a></li>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Memphis/">Memphis, Tennessee, USA</a></li>
