--- a/_includes/nodebots-day.html
+++ b/_includes/nodebots-day.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>International NodeBots Day</h2>
     <div class="content-wrapper">
-      <p>This year's event is on <strong>July 29th 2017</strong> <a href="https://github.com/nodebots/nodebotsday">Join us at an event near you!</a></p>
+      <p>This year's event is on <strong>July 28th 2018</strong> <a href="https://github.com/nodebots/nodebotsday">Join us at an event near you!</a></p>
       <p>Each year our community around the world gather on a single day to learn and make together. We call this NodeBots Day!</p>
 
       <p>NodeBots Day is world wide event where people learn how to control the physical world with JavaScript. We want you to leave with the satisfaction of making something awesome! Each event has experts on hand to help you build your project and start you on the path to building awesome devices. Overall we're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company and JavaScript. Lots of JavaScript.</p>
@@ -17,25 +17,17 @@
         Staying in this year? Follow along from home! Get a <a href="#getting-started">kit</a>, find a project and join us in the <a href="https://gitter.im/nodebots/nodebots.io">chat</a>.
       </p>
 
-      <h3>2017 Locations!</h3>
+      <h3>2018 Locations!</h3>
 
       <div class="col-50">
         <h4>North America</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Auburn/">Auburn, California, USA</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Dallas/">Dallas, Texas, USA</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Houston/">Houston, Texas, USA</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Memphis/">Memphis, Tennessee, USA</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Norfolk/">Norfolk, Virginia, USA</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Phoenix/">Phoenix/Mesa, Arizona, USA</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Mexico/">Mexico City/, Mexico</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Miami/">Miami, Florida, USA</a></li>
+	  <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2018/Miami/">Miami, Florida, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2018/West_Palm_Beach/">West Palm Beach, Florida, USA</a></li>
         </ul>
 
         <h4>South America</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Bogota/">Bogotá DC, Bogotá DC, Colombia</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Salvador/">Salvador, Bahia, BRA</a></li>
         </ul>
       </div>
 
@@ -43,17 +35,14 @@
         
         <h4>Asia</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Kerala/">Kerala, India</a></li>
         </ul>
 
         <h4>Australia</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/Melbourne/">Melbourne, Victoria (22 July, 2017)</a></li>
         </ul>
 
         <h4>Europe</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2017/NoviSad">Novi Sad, Serbia</a></li>
         </ul>
       </div>
     </div>
