Add Portland to 2018 Nodebots day list

--- a/_includes/nodebots-day.html
+++ b/_includes/nodebots-day.html
@@ -22,8 +22,9 @@
       <div class="col-50">
         <h4>North America</h4>
         <ul>
-	        <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2018/Miami/">Miami, Florida, USA</a></li>
+	  <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2018/Miami/">Miami, Florida, USA</a></li>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2018/West_Palm_Beach/">West Palm Beach, Florida, USA</a></li>
+	  <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2018/Portland/">Portland, Oregon, USA</a></li>
         </ul>
 
         <h4>South America</h4>
