Adding Miami, Fort Lauderdale and West Palm Beach

--- a/_includes/nodebots-day.html
+++ b/_includes/nodebots-day.html
@@ -22,7 +22,8 @@
       <div class="col-50">
         <h4>North America</h4>
         <ul>
-	        <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2019/Norfolk">Norfolk, Virginia, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2019/Norfolk">Norfolk, Virginia, USA</a></li>
+          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2019/Miami_Fort_Lauderdale">Miami, Fort Lauderdale, and West Palm Beach, FL, USA</a></li>
         </ul>
 
         <h4>South America</h4>
